@@ -1,3 +1,10 @@
+Summary of important user-visible changes for communications 1.1.2:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+      istrellis
+      poly2trellis
+
 Summary of important user-visible changes for communications 1.1.1:
 -------------------------------------------------------------------
 
